# marketing-is-easy

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md
.serena/: project.yml
docs/: frontend-architecture.md  user-guide.md
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: assets.ts  auth.ts  calendar.ts  channels.ts  client.ts  dashboard.ts  posts.ts  settings.ts  themes.ts
frontend/src/hooks/: queryKeys.ts  useAuth.ts  useCalendar.ts  useChannels.ts  useDashboard.ts  useGeneration.ts  usePost.ts  usePostEditor.ts  usePosts.ts  useSettings.ts  useTheme.ts
frontend/src/lib/: constants.ts  date.ts  platform.ts  types.ts
frontend/src/pages/: Calendar.tsx  Channel.tsx  ContentLibrary.tsx  Dashboard.tsx  Login.tsx  Settings.tsx  ThemeDetail.tsx  Themes.tsx
frontend/src/stores/: editor.ts  ui.ts
frontend/src/styles/: globals.css
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_themes_and_api_support.py  003_add_app_settings.py
scripts/: create_admin.py  download_fonts.py
src/admin_bot/: bot.py
src/api/: auth.py  deps.py  main.py
src/config/: settings.py  settings_registry.py
src/db/: models.py  repo.py  settings_repo.py  theme_repo.py
src/publishing/: instagram_publisher.py  manual_publisher.py  telegram_publisher.py  token_manager.py  youtube_publisher.py
src/workers/: generation_worker.py  publish_worker.py  task_queue.py  token_refresh_worker.py  video_worker.py
(+76 files in other folders)
